# cdk/OpenAPI_Swagger_Definition.yaml
@@ -321,6 +321,85 @@ paths:
         httpMethod: POST
         type: aws_proxy
 
+  /admin/entra_groups:
+    <<: *commonOptions
+    get:
+      tags:
+        - Admin
+      summary: Get paginated Entra groups with member counts
+      operationId: get_admin_entra_groups
+      security:
+        - adminAuthorizer: []
+      parameters:
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 20
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+      responses:
+        "200":
+          description: Paginated list of Entra groups
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${adminFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: POST
+        type: aws_proxy
+
+  /admin/entra_groups/{groupId}/users:
+    <<: *commonOptions
+    get:
+      tags:
+        - Admin
+      summary: Get paginated users within a specific Entra group
+      operationId: get_admin_entra_group_users
+      security:
+        - adminAuthorizer: []
+      parameters:
+        - name: groupId
+          in: path
+          required: true
+          schema:
+            type: string
+        - name: limit
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 10
+        - name: offset
+          in: query
+          required: false
+          schema:
+            type: integer
+            default: 0
+      responses:
+        "200":
+          description: Paginated list of users in group
+        "400":
+          description: Bad Request
+        "401":
+          description: Unauthorized
+        "500":
+          description: Internal Server Error
+      x-amazon-apigateway-integration:
+        uri:
+          Fn::Sub: arn:aws:apigateway:${AWS::Region}:lambda:path/2015-03-31/functions/${adminFunction.Arn}/invocations
+        passthroughBehavior: "when_no_match"
+        httpMethod: POST
+        type: aws_proxy
+
   /admin/users:
     <<: *commonOptions
     get:
